<resources>
    <string name="app_name">Holden Events</string>
    <string name="empty_string" />
    <string name="com_auth0_domain">holden-snhu-dev.us.auth0.com</string>
    <string name="com_auth0_client_id">sRpJlWjcr2yAAYSFIMxn06tFcxW1vLLv</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_event_detail">Event Details</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_create_account">Create account</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Username must be a valid email address.</string>
    <string name="invalid_password">Password must be 8 or more characters and contain: \na lowercase letter, \na capital letter, \na number, and \na special character.</string>
    <string name="login_failed">"Login failed."</string>
    <string name="account_creation_failed">Account creation failed.</string>
    <string name="expires_at">expiresAt</string>
    <string name="access_token">accessToken</string>
    <string name="role">role</string>
    <string name="date_format">EEE LLL dd HH:mm:ss zzz yyyy</string>
    <string name="human_readable_date_format">yyyy-MM-dd</string>
    <string name="human_readable_time_format">HH:mm a</string>
    <string name="start_date_time">Start: %1$s\n\t%2$s</string>
    <string name="end_date_time">End: %1$s\n\t%2$s</string>
    <string name="prompt_event_name">Event Name</string>
    <string name="prompt_event_description">Event Description</string>
    <string name="prompt_event_group">Event Group</string>
    <string name="prompt_event_location">Event Location</string>
    <string name="prompt_event_start_time">Event Start Time</string>
    <string name="prompt_event_start_date">Event Start Date</string>
    <string name="prompt_event_end_time">Event End Time</string>
    <string name="prompt_event_end_date">Event End Date</string>
    <string name="create_event">Create Event</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="secret_shared_prefs">secret_shared_prefs</string>
</resources>