<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".EventDetailActivity">

    <TextView
        android:id="@+id/event_detail_name_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/prompt_event_name"
        app:layout_constraintEnd_toStartOf="@+id/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_detail_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_event_name"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_name_label" />

    <EditText
        android:id="@+id/event_detail_name_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_event_name"
        android:visibility="invisible"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toStartOf="@+id/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_name_label" />

    <ImageButton
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:contentDescription="@string/edit"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/event_detail_name_label"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:contentDescription="@string/save"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/event_detail_name_label"
        app:srcCompat="@drawable/ic_baseline_save_24"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/event_detail_description_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_event_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_name_edit" />

    <TextView
        android:id="@+id/event_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_event_description"
        android:lines="8"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_description_label" />

    <EditText
        android:id="@+id/event_detail_description_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="top|start"
        android:hint="@string/prompt_event_description"
        android:lines="8"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_description_label" />

    <TextView
        android:id="@+id/event_detail_location_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_event_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_description_edit" />

    <TextView
        android:id="@+id/event_detail_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:hint="@string/prompt_event_location"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_location_label" />

    <Spinner
        android:id="@+id/event_detail_location_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:hint="@string/prompt_event_location"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_location_label" />

    <TextView
        android:id="@+id/event_detail_group_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_event_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_location_edit" />

    <TextView
        android:id="@+id/event_detail_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:hint="@string/prompt_event_group"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_group_label" />

    <Spinner
        android:id="@+id/event_detail_group_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:hint="@string/prompt_event_group"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_group_label" />

    <TextView
        android:id="@+id/event_detail_start_date_label"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_event_start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_group" />

    <TextView
        android:id="@+id/event_detail_start_time_label"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_event_start_time"
        app:layout_constraintEnd_toEndOf="@+id/event_detail_group"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_group" />

    <TextView
        android:id="@+id/event_detail_start_date"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_start_date_label" />

    <TextView
        android:id="@+id/event_detail_start_time"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/event_detail_group"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_start_time_label" />


    <TextView
        android:id="@+id/event_detail_end_date_label"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_event_end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_start_date" />

    <TextView
        android:id="@+id/event_detail_end_time_label"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_event_end_time"
        app:layout_constraintEnd_toEndOf="@+id/event_detail_group"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_start_time" />

    <TextView
        android:id="@+id/event_detail_end_date"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_end_date_label" />

    <TextView
        android:id="@+id/event_detail_end_time"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/event_detail_group"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_end_time_label" />

</androidx.constraintlayout.widget.ConstraintLayout>